--- a/src/app/components/document-editor/document-editor.component.scss
+++ b/src/app/components/document-editor/document-editor.component.scss
@@ -1,6 +1,7 @@
 :host, .document-editor {
     display: block;
     height:100%;
+    margin-bottom: 3em;
 }
 
 .document-editor {
